# src/routes/feedback.routes.js
@@ -6,6 +6,7 @@ const feedbackController = new FeedbackController();
 
 router.post('/submit', (req, res) => feedbackController.submitFeedback(req, res));
 router.get('/list', (req, res) => feedbackController.getFeedbacks(req, res));
+router.get('/dids', (req, res) => feedbackController.getAllDids(req, res));
 router.get('/reputation/:did', (req, res) => feedbackController.getReputation(req, res));
 
 module.exports = router;
